fix topic on mobile

--- a/frontend/web/less/desktop/post.less
+++ b/frontend/web/less/desktop/post.less
@@ -269,9 +269,9 @@
             .dropdown{
                 float: right;
                 width: 20%;
-                padding: 10px 15px 10px 5px;
+                padding: 10px 15px 10px 0px;
                 .dropdown-toggle{
-                    width: 150px;
+                    width: 160px;
                     height: 34px;
                     background: #fff;
                     padding: 8px;
@@ -285,9 +285,9 @@
                 }
                 .dropdown-menu{
                     padding: 5px;
-                    top: 40px;
-                    left: 5px;
-                    min-width: 150px;
+                    top: 42px;
+                    left: 0px;
+                    width: 193px;
                 }
                 select{
                     -webkit-appearance: none;
