--- a/frontend/web/less/desktop/topic.less
+++ b/frontend/web/less/desktop/topic.less
@@ -33,14 +33,14 @@
         border-top-right-radius: 4px;
         .header{
             background: #5888ac;
-            padding: 0 15px;
+            padding: 0 5px 3px;
             width: 100%;
             height: 40px;
             border-bottom: 1px solid #fff;
             border-top-left-radius: 4px;
             border-top-right-radius: 4px;
             .back_page{
-                width: 75px;
+                width: 95px;
                 height: 40px;
                 float: left;
                 border-right: 1px solid #fff;
@@ -51,7 +51,7 @@
                 span{
                     font-size: 18px;
                     color: #fff;
-                    text-align: left;
+                    text-align: center;
                     display: block;
                     line-height: 40px;
                 }
@@ -91,7 +91,7 @@
                     color: #fff;
                     font-size: 18px;
                     display: block;
-                    text-align: right;
+                    text-align: center;
                     line-height: 40px;
                     i{
                         color: #fff;
@@ -126,9 +126,9 @@
                 }
                 .dropdown-menu{
                     padding: 5px;
-                    top: 40px;
-                    left: 5px;
-                    width: 20%;
+                    top: 42px;
+                    left: 0px;
+                    width: 193px;
                     li{
                         cursor: pointer;
                     }
