--- a/frontend/web/less/mobile/topic.less
+++ b/frontend/web/less/mobile/topic.less
@@ -32,7 +32,7 @@
             }
         }
         .title_page{
-            width: 55%;
+            width: 50%;
             height: 40px;
             margin: auto;
             float: left;
@@ -47,7 +47,7 @@
                 color: #fff;
                 display: inherit;
                 text-align: center;
-                font-size: 17px;
+                font-size: 18px;
                 overflow: hidden;
                 text-overflow: ellipsis;
                 white-space: nowrap;
@@ -55,12 +55,12 @@
         }
         .create_topic{
             float: left;
-            width: 25%;
+            width: 30%;
             height: 40px;
             cursor: pointer;
             span{
                 color: #fff;
-                font-size: 11px;
+                font-size: 12px;
                 display: block;
                 text-align: center;
                 i{
@@ -98,7 +98,7 @@
             border-collapse: separate;
             margin: auto;
             float: right;
-            width: 60%;
+            width: 55%;
             td{ 
                 width: 50px;
                 font-size: 14px;
@@ -125,7 +125,7 @@
             float: right;
             width: 12%;
             height: 44px;
-            margin: 0 0 0 10%;
+            margin: 0 0 0 15%;
             font-size: 22px;
             color: #fff;
             line-height: 44px;
@@ -140,16 +140,16 @@
     }
     .filter_sort{
         width: 100%;
-        height: 34px;
-        padding: 6px;
-        background: #5486b0;
+        // height: 34px;
+        padding: 5px;
+        background: #5888ac;
         position: fixed;
         top: 145px;
         border-top: 1px solid #fff;
         display: none;
         z-index: 20;
         &.active{
-            display: table;
+            display: block;
         }
         .dropdown{
             background: #fff;
@@ -216,12 +216,12 @@
                         color: #1d1b1b;
                         margin: 0;
                         font-size: 12px;
-                        text-align: left;
+                        text-align: right;
                     }
                     .name_topic{
                         font-size: 18px;
-                        width: 45%;
-                        height: 50px;
+                        width: 40%;
+                        // height: 50px;
                         float: left;
                         overflow: hidden;
                         p,span{
@@ -229,31 +229,32 @@
                             text-overflow: ellipsis;
                             white-space: nowrap;
                             font-size: 14px;
+                            text-align: left;
                         }
                     }
                     .num_count{
-                        width: 12%;
-                        height: 50px;
+                        width: 14%;
+                        // height: 50px;
                         float: right;
                         margin-right: 2%;
                         i{
-                            margin-right: 3px;
+                            margin-right: 5%;
                         }
                     }
                     .num_count_duration{
-                        width: 18%;
-                        height: 50px;
+                        width: 20%;
+                        // height: 50px;
                         float: right;
                         i{
-                            margin-right: 3px;
+                            margin-right: 5%;
                         }
                     }
                     .arrow{
                         width: 8%;
-                        height: 50px;
+                        // height: 50px;
                         float: right;
                         p{
-                            text-align: center;
+                            text-align: right;
                         }
                         i{
                             font-size: 16px;
